# Explain_LISA_CNN

./: LICENSE  LISA.ipynb  README.md  it18059564_Fine_tuning_covid_model.ipynb  pyproject.toml  setup.py  test.py
.github/workflows/: publish-to-pypi.yml
ExplainLISA/: ExplainLISA.py  __init__.py
Explain_LISA/: ExplainLISA.py  __init__.py
Explain_LISA_CNN/: ExplainLISA.py  Explanations.py  __init__.py
Explain_LISA_CNN_test_23/: ExplainLISA.py  Explanations.py  __init__.py
Explain_LISA_CNN_test_25/: ExplainLISA.py  __init__.py
Explain_LISA_CNN_test_28/: ExplainLISA.py  __init__.py
LISA_CNN_ExplainerV3/: ExplainLISA.py  __init__.py
LISA_CNN_ExplainerV3/utils/: __init__.py  anchor_explanation.py  integrated_gradient.py  lime_explanation.py  shap_explanation.py
