[tool.poetry]
name = "LISA_CNN_ExplainerV3"
version = "0.1.0"
description = "Unified Explanation Provider For CNNs"
authors = ["Sudil H.P Abeyagunasekera <sudilhasithaa51@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/SudilHasitha/LISA_CNN_ExplainerV3"
repository = "https://github.com/SudilHasitha/LISA_CNN_ExplainerV3"
keywords = ["LIME", "Integrated gradients", "SHAP", "Anchors", "Explainable AI", "XAI", "CNN Explainer", "LISA"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
tensorflow = "^2.14.0"
opencv-python = "^4.8.0"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
shap = "^0.43.0"
alibi = "^0.9.0"
lime = "^0.2.0"
scikit-image = "^0.22.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
explain_lisa = "LISA_CNN_ExplainerV3.ExplainLISA:main"
