[tool.poetry]
name = "LISA_CNN_ExplainerV3"
version = "0.1.0"
description = "Unified Explanation Provider For CNNs"
authors = ["Sudil H.P Abeyagunasekera <sudilhasithaa51@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/SudilHasitha/LISA_CNN_ExplainerV3"
repository = "https://github.com/SudilHasitha/LISA_CNN_ExplainerV3"
keywords = ["LIME", "Integrated gradients", "SHAP", "Anchors", "Explainable AI", "XAI", "CNN Explainer", "LISA"]

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "^2.14.0"
opencv-python = "^4.8.0"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
scikit-image = "^0.22.0"
transformers = "^4.35.0"
tf-keras = "^2.15.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
explain_lisa = "LISA_CNN_ExplainerV3.ExplainLISA:main"
